--- a/Watch.html
+++ b/Watch.html
@@ -37,6 +37,6 @@
     <p>Explore our Collections</p>
     <p class="explore ch">Rado is known as the Master of Materials: from high-tech ceramic to sapphire crystal and diamonds to stainless steel, our innovative watches have no boundaries when it comes to design. Feel and discover the Rado difference!</p>
 </div>
-    
+    <div>Rohit Sharma</div>
 </body>
 </html>
